estimation model illustrations

--- a/common/bib/algebra.bib
+++ b/common/bib/algebra.bib
@@ -571,15 +571,14 @@
   }
 
 @book{noble,
+  isbn         = {0130412600},  
   author       = {Ben Noble and James W. Daniel},
   title        = {Applied Linear Algebra},
   edition      = {3},
   year         = {1988},
   publisher    = {Prentice-Hall},
   address      = {Englewood Cliffs, NJ, USA},
-  isbn         = {0-13-041260-0},  
   oclc         = {15591649},
-  note         = {Library QA184.N6 1988 512.5 87-11511},
   language     = {english},
   url          = {http://www.worldcat.org/isbn/0130412600},
   urla         = {http://www.amazon.com/dp/0130412600},
