--- a/common/operator.tex
+++ b/common/operator.tex
@@ -2631,6 +2631,56 @@ and $\oppI(\opU)$ the \structe{image set} of $\opU$.\ifdochas{relation}{\footnot
 \end{proof}
 
 %---------------------------------------
+\begin{example}[Rotation matrix]
+\footnote{
+  \citerpg{noble}{311}{0130412600}
+  }
+\index{rotation matrix}
+\index{matrix!rotation}
+\label{ex:operator_rotation_unitary}
+%---------------------------------------
+\mbox{}\\
+\exbox{
+  \mcom{\brb{\opR_\theta \eqd
+    \brs{\begin{array}{rr}
+      \cos\theta & -\sin\theta   \\
+      \sin\theta &  \cos\theta
+    \end{array}}
+  }}{\opb{rotation matrix} $\opR_\theta:\R^2\to\R^2$}
+  \qquad\implies\qquad
+  \brb{\begin{array}{F rcl @{\qquad}M}
+    (1). & \opRi_\theta &=& \opR_{-\theta} & and\\
+    (2). & \opRa_\theta &=& \opRi_\theta   & ($\opR$ is unitary)
+  \end{array}}
+  }
+\end{example}
+\begin{proof}
+\begin{align*}
+  \opRa
+    &= \opR^H
+  \\&= \left[\begin{array}{rr}
+         \cos\theta & -\sin\theta   \\
+         \sin\theta &  \cos\theta
+       \end{array}\right]^H
+    && \text{by definition of $\opR$}
+  \\&= \left[\begin{array}{rr}
+          \cos\theta &  \sin\theta   \\
+         -\sin\theta &  \cos\theta
+       \end{array}\right]
+    && \text{by definition of \ope{Hermetian transpose} operator $H$}
+  \\&= \left[\begin{array}{rr}
+          \cos(-\theta) & -\sin(-\theta)   \\
+          \sin(-\theta) &  \cos(-\theta)
+       \end{array}\right]
+    && \text{by \prefp{thm:cos-x}}
+  \\&= \opR_{-\theta}
+    && \text{by definition of $\opR$}
+  \\&= \opRi
+    && \text{by 1.}
+\end{align*}
+\end{proof}
+
+%---------------------------------------
 \begin{example}
 \footnote{
   \citerp{gelfand1963}{4},
@@ -2847,55 +2897,6 @@ $\opFTi$ the \ope{inverse Fourier Transform} operator \ifxref{harPoly}{thm:opFSi
     \\&= \inprod{\fx}{\mcom{\opFTi}{$\opFTa$} \Fy}
   \end{align*}
 This implies that $\opFT$ is unitary ($\opFTa = \opFTi$).
-\end{proof}
-
-
-
-%---------------------------------------
-\begin{example}[Rotation matrix]
-\footnote{
-  \citerp{noble}{311}
-  }
-\index{rotation matrix}
-\index{matrix!rotation}
-\label{ex:operator_rotation_unitary}
-%---------------------------------------
-Let the rotation matrix $\opR_\theta:\R^2\to\R^2$ be defined as
-\[ \opR_\theta \eqd
-   \left[\begin{array}{rr}
-     \cos\theta & -\sin\theta   \\
-     \sin\theta &  \cos\theta
-   \end{array}\right]
-\]
-\exbox{\begin{array}{l rcl @{\qquad}D}
-  1. & \opRi_\theta &=& \opR_{-\theta}  \\
-  2. & \opRa_\theta &=& \opRi_\theta   & ($\opR$ is unitary)
-\end{array}}
-\end{example}
-\begin{proof}
-\begin{align*}
-  \opRa
-    &= \opR^H
-  \\&= \left[\begin{array}{rr}
-         \cos\theta & -\sin\theta   \\
-         \sin\theta &  \cos\theta
-       \end{array}\right]^H
-    && \text{by definition of $\opR$}
-  \\&= \left[\begin{array}{rr}
-          \cos\theta &  \sin\theta   \\
-         -\sin\theta &  \cos\theta
-       \end{array}\right]
-    && \text{by definition of Hermetian transpose operator $H$}
-  \\&= \left[\begin{array}{rr}
-          \cos(-\theta) & -\sin(-\theta)   \\
-          \sin(-\theta) &  \cos(-\theta)
-       \end{array}\right]
-    && \text{by \prefp{thm:cos-x}}
-  \\&= \opR_{-\theta}
-    && \text{by definition of $\opR$}
-  \\&= \opRi
-    && \text{by 1.}
-\end{align*}
 \end{proof}
 
 %=======================================
