--- a/common/spectral_estimation.tex
+++ b/common/spectral_estimation.tex
@@ -11,6 +11,7 @@ Quality of spectral estimators\footnote{
   \citerppgc{proakis1996}{916}{919}{9780133737622}{\textsection ``12.2.4 Performance Characteristics of Nonparametric Power Spectrum Estimators"},
   \citerpgc{rao2018}{731}{9789811080814}{``Table 12.1 Comparison of performance of classical methods"},
   \citerpgc{salivahanan2001}{606}{9780074639962}{\textsection ``12.5 Power Spectrum Estimation: Non-Parametric Methods"},
+ %\citerppgc{ifeachor1993}{577}{610}{020154413X}{Chapter 10 ``Spectrum estimation and analysis"},
   \citerppgc{ifeachor2002}{706}{707}{0201596199}{\textsection ``11.3.7 Comparison of the power spectral density estimation methods"},
   \citerpg{chitode2009dsp}{P-100}{9788184316469},
   \citerp{abdaheer2009}{204}
