start including example R code in abcstat

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -4423,12 +4423,12 @@
   }
 
 @book{michel1993,
+  isbn         = {048667598X},
+  oclc         = {27770331},
   author       = {Anthony N. Michel and Charles J. Herget},
   title        = {Applied Algebra and Functional Analysis},
   publisher    = {Dover Publications, Inc.},
   year         = {1993},
-  isbn         = {0-486-67598-X},
-  oclc         = {27770331},
   library      = {QA154.2.M52 1993},
   url          = {http://books.google.com/books?vid=ISBN048667598X},
   urlw         = {http://www.worldcat.org/isbn/048667598X},
