--- a/common/bib/approx.bib
+++ b/common/bib/approx.bib
@@ -188,13 +188,13 @@ f%============================================================================
   }
   
 @book{keener,
+  isbn         = {0201156741},
+  oclc         = {16276186},
   author       = {James P. Keener},
   title        = {Principles of Applied Mathematics; Transformation and Approximation},
   publisher    = {Addison-Wesley Publishing Company},
   address      = {Reading, Massachusets},
   year         = {1988},
-  isbn         = {0-201-15674-1},
-  oclc         = {16276186},
   urla         = {http://www.math.utah.edu/~keener/},
   url          = {http://www.worldcat.org/isbn/0201156741},
   }
