--- a/common/estimate_phase.tex
+++ b/common/estimate_phase.tex
@@ -241,87 +241,84 @@ explicitly computed in accordance with the equation
 \end{fsL}
 
 
-\begin{figure}[ht]
-\color{figcolor}
-\begin{center}
-\begin{fsK}
-\setlength{\unitlength}{0.15mm}
-\begin{picture}(1100,500)(-100,-250)
-  \thinlines                                      
-  %\graphpaper[10](0,-150)(500,300)                  
-
-  \put(-100,  10){\makebox ( 40, 0)[b]{$r(t)$} }
-  \put(-100,   0){\vector(1,0){40} }
-  \put(- 50,   0){\circle{20} }
-  \put(- 50,   0){\makebox (  0,  0)   {$\times$} }
-  \put(- 50, -50){\vector(0,1){40} }
-  \put(-90,-150){\framebox(80,100)   {$\lambda(t-nT)$} }
-
-  \put(- 40,   0){\line    (  1,  0)   { 40}           }
-  \put(   0,-200){\line    (  0,  1)   {400}           }
-  \put(   0, 200){\vector  (  1,  0)   {190}           }
-  \put(   0,-200){\vector  (  1,  0)   {190}           }
-
-  \put(  50, -50){\framebox(100,100)   {$\cos2\pi f_ct$} }
-  \put( 150,   0){\vector  (  1,  0)   { 50}           }
-  \put( 200,-190){\line    (  0,  1)   {380}           }
-  \put( 200,-200){\circle{20} }
-  \put( 200,-200){\makebox (  0,  0)   {$\times$} }
-  \put( 185, -85){\framebox( 30, 30)   {$j$}           }   
-  \put( 200, 200){\circle{20} }
-  \put( 200, 200){\makebox (  0,  0)   {$\times$} }
-
-  \put( 210, 200){\vector  (  1,  0)   { 40}           }
-  \put( 210,-200){\vector  (  1,  0)   { 40}           }
-  \put( 250, 150){\framebox(100,100)   {$\int_t\dt$}   }   
-  \put( 250,-250){\framebox(100,100)   {$\int_t\dt$}   }   
-
-  \put( 350, 200 ){\usebox{\picSampler}}
-  \put( 350,-200 ){\usebox{\picSampler}}
-
-  \put( 500, 200 ){\usebox{\picMultT}  }
-  \put( 500,-200 ){\usebox{\picMultL}  }
-  \put( 550, 200){\vector  (  1,  0)   {100}           }
-  \put( 550,-200){\vector  (  1,  0)   {100}           }
-
-  \put( 350,- 50){\framebox(100,100)   {$a_n$}   }   
-  \put( 450,   0){\line    (  1,  0)   { 50}           }
-  \put( 500,-150){\line    (  0,  1)   {300}           }
-
-  \put( 550,- 50){\framebox(100,100)   {$\theta_n$}} 
-  \put( 650,   0){\line    (  1,  0)   { 50}           }
-  \put( 700,   0){\line    (  0,  1)   { 75}           }
-  \put( 700,   0){\line    (  0, -1)   { 75}           }
-  \put( 650,  75){\framebox(100, 75)   {$\cos$}  }   
-  \put( 650,-150){\framebox(100, 75)   {$\sin$}  }   
-  \put( 700, 200 ){\usebox{\picMultT}  }
-  \put( 700,-200 ){\usebox{\picMultL}  }
-  \put( 750, 200){\line    (  1,  0)   {250}           }
-  \put( 750,-200){\line    (  1,  0)   {250}           }
-  \put(1000, 200){\line    (  0, -1)   {150}           }
-  \put(1000,-200){\line    (  0,  1)   {150}           }
-  \put( 800, 200){\line    (  0, -1)   {150}           }
-  \put( 800,-200){\line    (  0,  1)   {150}           }
-
-
-  \put( 800,   0 ){\usebox{\picAddE}   }
-  \put(1000,   0 ){\usebox{\picAddX}   }
-  \put( 950,   0 ){\usebox{\picMultL}  }
-  \put( 850, -25){\framebox( 50, 50)   {$\frac{1}{x}$}  }   
-  \put( 950,  60){\makebox( 0, 0)[b]   {$\tan\estML[\phi]$}  }   
-  \put( 950,  10){\vector (  0,  1)   { 40}           }
-
-\end{picture}                                   
-\end{fsK}
-\end{center}
-\caption{
-   Explicit phase estimation implementation
-   \label{fig:est_p_explicit}
-   }
-\end{figure}
-
-
-
+%20191008%\begin{figure}[ht]
+%20191008%\color{figcolor}
+%20191008%\begin{center}
+%20191008%\begin{fsK}
+%20191008%\setlength{\unitlength}{0.15mm}
+%20191008%\begin{picture}(1100,500)(-100,-250)
+%20191008%  \thinlines                                      
+%20191008%  %\graphpaper[10](0,-150)(500,300)                  
+%20191008%
+%20191008%  \put(-100,  10){\makebox ( 40, 0)[b]{$r(t)$} }
+%20191008%  \put(-100,   0){\vector(1,0){40} }
+%20191008%  \put(- 50,   0){\circle{20} }
+%20191008%  \put(- 50,   0){\makebox (  0,  0)   {$\times$} }
+%20191008%  \put(- 50, -50){\vector(0,1){40} }
+%20191008%  \put(-90,-150){\framebox(80,100)   {$\lambda(t-nT)$} }
+%20191008%
+%20191008%  \put(- 40,   0){\line    (  1,  0)   { 40}           }
+%20191008%  \put(   0,-200){\line    (  0,  1)   {400}           }
+%20191008%  \put(   0, 200){\vector  (  1,  0)   {190}           }
+%20191008%  \put(   0,-200){\vector  (  1,  0)   {190}           }
+%20191008%
+%20191008%  \put(  50, -50){\framebox(100,100)   {$\cos2\pi f_ct$} }
+%20191008%  \put( 150,   0){\vector  (  1,  0)   { 50}           }
+%20191008%  \put( 200,-190){\line    (  0,  1)   {380}           }
+%20191008%  \put( 200,-200){\circle{20} }
+%20191008%  \put( 200,-200){\makebox (  0,  0)   {$\times$} }
+%20191008%  \put( 185, -85){\framebox( 30, 30)   {$j$}           }   
+%20191008%  \put( 200, 200){\circle{20} }
+%20191008%  \put( 200, 200){\makebox (  0,  0)   {$\times$} }
+%20191008%
+%20191008%  \put( 210, 200){\vector  (  1,  0)   { 40}           }
+%20191008%  \put( 210,-200){\vector  (  1,  0)   { 40}           }
+%20191008%  \put( 250, 150){\framebox(100,100)   {$\int_t\dt$}   }   
+%20191008%  \put( 250,-250){\framebox(100,100)   {$\int_t\dt$}   }   
+%20191008%
+%20191008%%20191008%  \put( 350, 200 ){\usebox{\picSampler}}
+%20191008%%20191008%  \put( 350,-200 ){\usebox{\picSampler}}
+%20191008%
+%20191008%%20191008%  \put( 500, 200 ){\usebox{\picMultT}  }
+%20191008%%20191008%  \put( 500,-200 ){\usebox{\picMultL}  }
+%20191008%  \put( 550, 200){\vector  (  1,  0)   {100}           }
+%20191008%  \put( 550,-200){\vector  (  1,  0)   {100}           }
+%20191008%
+%20191008%  \put( 350,- 50){\framebox(100,100)   {$a_n$}   }   
+%20191008%  \put( 450,   0){\line    (  1,  0)   { 50}           }
+%20191008%  \put( 500,-150){\line    (  0,  1)   {300}           }
+%20191008%
+%20191008%  \put( 550,- 50){\framebox(100,100)   {$\theta_n$}} 
+%20191008%  \put( 650,   0){\line    (  1,  0)   { 50}           }
+%20191008%  \put( 700,   0){\line    (  0,  1)   { 75}           }
+%20191008%  \put( 700,   0){\line    (  0, -1)   { 75}           }
+%20191008%  \put( 650,  75){\framebox(100, 75)   {$\cos$}  }   
+%20191008%  \put( 650,-150){\framebox(100, 75)   {$\sin$}  }   
+%20191008%  \put( 700, 200 ){\usebox{\picMultT}  }
+%20191008%  \put( 700,-200 ){\usebox{\picMultL}  }
+%20191008%  \put( 750, 200){\line    (  1,  0)   {250}           }
+%20191008%  \put( 750,-200){\line    (  1,  0)   {250}           }
+%20191008%  \put(1000, 200){\line    (  0, -1)   {150}           }
+%20191008%  \put(1000,-200){\line    (  0,  1)   {150}           }
+%20191008%  \put( 800, 200){\line    (  0, -1)   {150}           }
+%20191008%  \put( 800,-200){\line    (  0,  1)   {150}           }
+%20191008%
+%20191008%
+%20191008%  \put( 800,   0 ){\usebox{\picAddE}   }
+%20191008%  \put(1000,   0 ){\usebox{\picAddX}   }
+%20191008%  \put( 950,   0 ){\usebox{\picMultL}  }
+%20191008%  \put( 850, -25){\framebox( 50, 50)   {$\frac{1}{x}$}  }   
+%20191008%  \put( 950,  60){\makebox( 0, 0)[b]   {$\tan\estML[\phi]$}  }   
+%20191008%  \put( 950,  10){\vector (  0,  1)   { 40}           }
+%20191008%
+%20191008%\end{picture}                                   
+%20191008%\end{fsK}
+%20191008%\end{center}
+%20191008%\caption{
+%20191008%   Explicit phase estimation implementation
+%20191008%   \label{fig:est_p_explicit}
+%20191008%   }
+%20191008%\end{figure}
 
 %======================================
 \subsubsection{Decision directed implicit estimation implementation}
@@ -369,9 +366,6 @@ The PLL operates in accordance with the equation
    }
 \end{figure}
 
-
-
-
 %======================================
 \subsection{Non-decision directed phase estimation}
 %======================================
@@ -388,8 +382,6 @@ The PLL operates in accordance with the equation
    \int_{nT}^{(n+1)T} r(t)\sin(2\pi f_ct + \estML[\phi]) \dt
    = 0
 \]
-
-
 
 %======================================
 \section{Phase Lock Loop}
@@ -430,7 +422,6 @@ Reference: \cite{kao}
    \label{fig:est_p_implicit_b}
    }
 \end{figure}
-
 
 %=======================================
 \subsection{First order response}
@@ -713,12 +704,3 @@ $\Longrightarrow$
   \label{fig:loop1_fstep}
 }
 \end{figure}
-
-
-
-
-
-
-
-
-
