--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -254,6 +254,28 @@ This result follows directly from \prefpp{thm:estML-CR} with
 Alternatively, the results follow from \prefpp{thm:estML_amplitude}.
 \end{proof}
 
+%---------------------------------------
+\begin{minipage}{\tw-55mm}
+\begin{example}
+%---------------------------------------
+The R code to the right 
+calculates the \fncte{average} \xref{def:average} number of sunspots
+from 1749 to current times.
+\end{example}
+\end{minipage}
+\hfill
+\begin{minipage}{50mm}
+\begin{lstlisting}[language=R]
+data(sunspots);     
+x   = sunspot.month;
+N   = length(x);    
+avg = sum(x) / N;
+plot(x, col="blue");
+lines(c(start(x)[1],end(x)[1]), c(avg,avg), col="red")
+print(avg);
+\end{lstlisting}
+\end{minipage}
+
 %=======================================
 \section{Variance Estimation}
 %=======================================
