--- a/common/randseq_continuous_dsp.tex
+++ b/common/randseq_continuous_dsp.tex
@@ -36,7 +36,7 @@
 %---------------------------------------
 \begin{theorem}
 \index{linear time invariant}
-\footnote{\citerp{papoulis}{312}}
+\footnote{\citerpg{papoulis}{312}{0070484775}}
 %---------------------------------------
 Let $\fh:\R\to\C$ be the impulse response of a linear time-invariant system and
 Let $\rvy(t)=h(t)\conv \rvx(t) \eqd \int_{u\in\R}h(u)\rvx(t-u) \du$ as
@@ -358,7 +358,7 @@ Thus, $\Swxx(\omega)$ is the power density of $\rvx(t)$ in the frequency domain.
 \index{convolution}
 \index{linear time invariant systems}
 \index{LTI}
-\footnote{\citerpp{papoulis}{323}{324}}
+\footnote{\citerppg{papoulis}{323}{324}{0070484775}}
 %---------------------------------------
 Let $\fh:\R\to\C$ be the impulse response of a linear time-invariant system and
 let $\rvy(t)=h(t)\conv \rvx(t) \eqd \int_{u\in\R}h(u)\rvx(t-u) \du$ as
@@ -729,7 +729,7 @@ process $\fw(t)$)
 and $\gamma(t)$ is referred to as the \textbf{whitening filter}
 because it produces a white noise sequence when the input sequence
 is $\fx(t)$.
-\footnote{\citerpp{papoulis}{401}{402}}
+\footnote{\citerppg{papoulis}{401}{402}{0070484775}}
 
 
 %---------------------------------------
