--- a/common/sty/packages.sty
+++ b/common/sty/packages.sty
@@ -6,6 +6,8 @@
 %--------------------------------------
 % Style Packages
 %--------------------------------------
+ %\usepackage{bibentry}                 % https://tex.stackexchange.com/questions/49048/how-to-cite-one-bibentry-in-full-length-in-the-body-text
+ %\nobibliography*
  \usepackage{etex}                     % deal with counter problem. 2018016utc note: no longer necessary for xifthen
                                        
                                        %Document support
@@ -120,14 +122,8 @@
    \newrefformat{rem}  {Remark~\ref{#1}}
 
 %------------------------------------
-% glossary support
-%------------------------------------
-% \usepackage{glossaries}
-
-%------------------------------------
 % source code listing
 %------------------------------------
-%\newcommand{\indexstylecmd}[1]{\index{GNU Octave!\textcolor{blue}{#1}}}
  \newcommand{\indexstylecmd}[1]{\index{GNU Octave!#1}}
  \usepackage{listings}                % source code listing support
  \lstloadlanguages{Octave,MuPAD,C++}
@@ -136,7 +132,6 @@
           basicstyle       = \scriptsize ,
           keywordstyle     = \bfseries ,
           identifierstyle  =             ,
-%          indexstyle       = ,
           indexstyle       = [1]\indexstylecmd,
           commentstyle     = \color{blue},
           numberstyle      = \tiny\color{blue},
