--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -276,6 +276,7 @@
 %---------------------------------------
 % book citations
 %---------------------------------------
+%\newcommand{\fullcite}{\bibentry}
 \newcommand{\fullcite}{\cite}
 \newcommand{\citefull}[1]{\citebullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}
 \newcommand{\citer}   [1]{\citebullet\;\cite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
@@ -306,7 +307,7 @@
 %---------------------------------------
 \newcommand{\citeS}  [1]{{\scs\citeSbullet}\;\cite{#1}}
 \newcommand{\citeSc} [2]{{\scs\citeSbullet}\;\cite{#1} \lcomdelim{#2}\rcomdelim}
-
+%---------------------------------------
 % paper citations
 %---------------------------------------
 \newcommand{\citePfull}[1]{\citePbullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
@@ -327,7 +328,7 @@
 \newcommand{\citePgc}  [3]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#2}{\lcomdelim#3\rcomdelim}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citePppg} [4]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citePppgc}[5]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3} \lcomdelim#5\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
-
+%---------------------------------------
 % incollection citations
 %---------------------------------------
 \newcommand{\citeIfull}[1]{\citeIbullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
@@ -348,7 +349,7 @@
 \newcommand{\citeIgc}  [3]{\citeIbullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#2}{\lcomdelim#3\rcomdelim}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citeIppg} [4]{\citeIbullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citeIppgc}[5]{\citeIbullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3} \lcomdelim#5\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
-
+%---------------------------------------
 % web citations
 %---------------------------------------
 \newcommand{\citeWfull}[1]{\citeWbullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
@@ -356,9 +357,9 @@
 \newcommand{\citeWc}   [2]{\citeWbullet\;\cite{#1} \lcomdelim#2\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeWu}   [2]{\citeWbullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeWuc}  [3]{\citeWbullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
-
+%---------------------------------------
 % Original source citation---deprecated
-%-------------------
+%---------------------------------------
 \newcommand{\citor}    [1]{\citebullet\;\cite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
 \newcommand{\citorp}   [2]{\citebullet\;\cite{#1} page~#2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citorpu}  [3]{\citebullet\;\cite{#1} \href{#3}{page~#2}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
@@ -374,23 +375,21 @@
 \newcommand{\citorppg} [4]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citorppu} [4]{\citebullet\;\cite{#1} \href{#4}{pages~#2--#3}\index[xref]{{\cite{#1}}}}
 \newcommand{\citorcu}  [3]{\citebullet\;\cite{#1} \href{#3}{\lcomdelim#2\rcomdelim}\index[xref]{{\cite{#1}}}} 
-
+%---------------------------------------
 % Cite with web link to actual page being referenced
-%----------------------
+%---------------------------------------
 \newcommand{\citercu}  [3]{\citebullet\;\cite{#1} \href{#3}{\lcomdelim#2\rcomdelim}\index[xref]{{\cite{#1}}}} 
 \newcommand{\citerpu}  [3]{\citebullet\;\cite{#1} \href{#3}{page~#2}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citerpcu} [4]{\citebullet\;\cite{#1} \href{#4}{page~#2} \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}}
 \newcommand{\citerppu} [4]{\citebullet\;\cite{#1} \href{#4}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citerpg}  [3]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citerpgc} [4]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2} \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
-%\newcommand{\citerg}   [2]{\citebullet\;\href{http://books.google.com/books?vid=ISBN#2}{\cite{#1}}} % citation with google book search link to page
 \newcommand{\citerg}   [2]{\citebullet\;\cite{#1} \lcomdelim ISBN:\href{http://books.google.com/books?vid=ISBN#2}{#2}\rcomdelim}
 \newcommand{\citergc}  [3]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#2}{\lcomdelim#3\rcomdelim}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citerppg} [4]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citerppgc}[5]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3} \lcomdelim#5\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citeoeis} [1]{{\scs\citeWbullet}\;\href{http://oeis.org/#1}{\cite{oeis} \lcomdelim\url{http://oeis.org/#1}\rcomdelim}} % OEIS citation
 \newcommand{\genbank}  [3]{{\scs\citeWbullet}\;\cite{genbank} \lcomdelim#1, #2, \url{#3}\rcomdelim} % 1=title, 2=NC number 3=url
-
 \newcommand{\cittr}    [1]{\citetbl{\citebullet\;\cite{#1} \index[xref]{{\cite{#1}}}}} % citation with google book search link to page
 \newcommand{\cittu}    [1]{\citetbl{\citebullet\;\url{#1}}}
 \newcommand{\cittrc}   [2]{\citetbl{\citerc{#1}{#2}}}
@@ -404,31 +403,26 @@
 \newcommand{\cittrppu} [4]{\citetbl{\citebullet\;\cite{#1}, \href{#4}{pages~#2--#3}\index[xref]{{\cite{#1}}}}} % citation table entry with ref and one page
 \newcommand{\cittrpg}  [3]{\citetbl{\citebullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
 \newcommand{\cittrpgc} [4]{\citetbl{\citebullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}, #4\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
-%\newcommand{\cittrg}   [2]{\citetbl{\citebullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#2}{\lcomdelim\textsc{Google Book}\rcomdelim}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
 \newcommand{\cittrg}   [2]{\cittr{#1}}%  
 \newcommand{\cittrgc}  [3]{\citetbl{\citebullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#2\&pg=PA#2}{#3}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
 \newcommand{\cittrppg} [4]{\citetbl{\citebullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
 \newcommand{\cittrppgc}[5]{\citetbl{\citebullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}, #5\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
-
 \newcommand{\cithrpg}  [3]{\nocite{#1}\index[xref]{{\cite{#1}}}} % hidden citation table entry with ref and one page
 \newcommand{\citepg}   [3]{\citetbl{\citebullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
 \newcommand{\citeppg}  [4]{\citetbl{\citebullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
-
+%---------------------------------------
 % Hidden source citation
-%----------------------
+%---------------------------------------
 \newcommand{\cithr}  [1]{\nocite{#1}\index[xref]{{\cite{#1}}}} % hidden citation table entry with only reference (no page number)
 \newcommand{\cithrp} [2]{\nocite{#1}\index[xref]{{\cite{#1}}}} % hidden citation table entry with ref and one page
 \newcommand{\cithrpp}[3]{\nocite{#1}\index[xref]{{\cite{#1}}}} % hidden citation table entry with ref and page range
 \newcommand{\cithrc} [2]{\nocite{#1}\index[xref]{{\cite{#1}}}} % hidden citation table entry with ref and one comment
-
 \newcommand{\citepp} [3]{\citetbl{\citerpp{#1}{#2}{#3}}}
 
 %--------------------------------------
 % attention markers
 %--------------------------------------
 \newcommand{\attention}[1][]{%
-   %\marginpar[{\hfill\parbox[c][][c]{18mm}{\scriptsize\hspace{4mm}\usebox{\robotBoyR}\\\colorbox{yellow}{#1}}}]
-   %           {\parbox[c][][c]{0cm}{\scriptsize\usebox{\robotGirlL}\\\colorbox{yellow}{#1}}}
     \index{{\bf\em attention markers}!#1}
    %\index{{\bf\em \textcolor{red}{attention markers}}!#1}
    }
