motivation for moment estimation

--- a/common/density_estimation.tex
+++ b/common/density_estimation.tex
@@ -6,10 +6,14 @@
 \chapter{Density Estimation}
 \label{chp:pdfest}
 %=======================================
+In model-building, if a \emph{type} of parameterized
+\fncte{probability density function} \fncte{pdf} $\ppx(x)$ \xref{def:pdf}
+is known or more likely \emph{assumed}, 
+then all we need to do is estimate the parameters of these functions \xref{chp:moment_estimation}.
+However, if the density type is \emph{not} known or assumed, then we need to estimate it.
 
 References:
 \begin{liste}
   \item \citerg{silverman1986}{9780412246203}
 \end{liste}
-
 
