--- a/common/somepdfs.tex
+++ b/common/somepdfs.tex
@@ -121,6 +121,7 @@ value of the \fncte{uniform distribution} should \emph{not} be taken lightly.
 
 %---------------------------------------
 \begin{definition}
+\label{def:normal}
 %---------------------------------------
 \defbox{\begin{array}{c>{\ds}rc>{\ds}l}
   \mc{4}{M}{The \fnctd{Gaussian distribution} (or \fnctd{normal distribution}) has pdf}
@@ -141,6 +142,7 @@ value of the \fncte{uniform distribution} should \emph{not} be taken lightly.
 %---------------------------------------
 \begin{definition}
 \label{def:Gamma(b)}
+\label{def:gamma}
 \index{gamma function}
 \index{$\Gamma(b)$}
 \footnote{
@@ -265,12 +267,13 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s on a \structe{probability spac
 %=======================================
 %---------------------------------------
 \begin{definition}
-\label{def:pdf_chi}
 \index{Chi-squared distribution}
 \footnote{
   \citerp{proakis}{41},
   \citerpgc{papoulis1990}{219}{0137116985}{7-4 Special Distributions of Statistics, (7-78)}
   }
+\label{def:pdf_chi}
+\label{def:chisq}
 %---------------------------------------
 Let $\pp(x)$ be a \fncte{probability density function} on a \structe{probability space} $\ps$.
 \defboxt{
@@ -499,6 +502,7 @@ pdf
 \footnote{
   \citerp{proakis}{44}
   }
+\label{def:rayleigh}
 %---------------------------------------
 The \fnctd{Rayleigh distribution} is the pdf
 \defbox{
