--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -11,9 +11,9 @@
 %=======================================
 Moment estimation is extremely useful for model-building
 when a \emph{type} of parameterized
-\fncte{probability density function} \fncte{pdf} $\ppx(x)$ \xref{def:pdf}
+\fncte{probability density function} (\fncte{pdf}) $\ppx(x)$ \xref{def:pdf}
 is known or more likely \emph{assumed}, 
-but the \emph{parameters} themselves are \emph{not}.
+but the \emph{parameters} themselves are \emph{not known}.
 Examples of parameterized pdfs include the following:
 \\\begin{tabular}{clll}
     \imark & The \fncte{Uniform Distribution}    & with parameter mean $\pmean$                        & \xref{def:uniform}.
@@ -23,6 +23,15 @@ Examples of parameterized pdfs include the following:
   \\\imark & The \fncte{Rayleigh Distribution}   & with parameters radius $r$ and variance $\pvar$     & \xref{def:rayleigh}.
 \end{tabular}
 
+In the case of distributions with mean and/or variance parameters, 
+these parameters can be estimated using the techniques in this chapter,
+and the technique of estimating the pdf in this manner is called
+\opd{parametric density estimation}.\footnote{
+  \citerpgc{gramacki2017}{2}{9783319716886}{\textsection ``1.1 Background"}
+  }
+If a distribution type is not known and not assumed, then 
+the distribution itself must be estimated 
+using \opd{nonparametric density estimation} \xref{chp:pdfest}
 %=======================================
 \section{Mean Estimation}
 %=======================================
