add year and count labels to sunspot figure

--- a/common/math/graphics/data/sunspots_1749-2004.tex
+++ b/common/math/graphics/data/sunspots_1749-2004.tex
@@ -6,20 +6,28 @@
 % nominal yunit = 10mm
 % nominal font size = \scriptsize
 %============================================================================
-\psset{xunit=0.003\psxunit}%
-\psset{yunit=0.35\psyunit}%
-\begin{pspicture}(-20,-1.5)(3800,4)%
-  %-------------------------------------
-  % parameters
-  %-------------------------------------
-  \psset{linewidth=0.75pt}%
+\psset{xunit=0.060\psxunit}%
+\psset{yunit=0.010\psyunit}%
+\begin{pspicture}(1724,-75)(2020,275)%
   %-------------------------------------
   % axes
   %-------------------------------------
-  \psaxes[linecolor=axis,linewidth=0.75pt,yAxis=false,ticks=none,labelsep=2pt,labels=none]{->}(0,0)(-100,-1.5)(3800,4)%
-  \psaxes[linecolor=axis,linewidth=0.75pt,xAxis=false,ticks=none,labelsep=2pt]{<->}(0,0)(-10,-1.5)(3800,4)%
+  {%
+    \psset{ticks=all,labels=all,Dx=20,Dy=50,linecolor=axis,linewidth=0.75pt,}%
+         %       |          |   |     |________ y-labels increment
+         %       |          |   |______________ x-labels increment
+         %       |          |__________________ ticks  x/y/all/none
+         %       |__________|__________________ labels x/y/all/none
+    \psaxes[yAxis=false]{<->}(   0,0)(1724,-1.5)(2020,275)% x-axis
+    \psaxes[xAxis=false]{ ->}(1740,0)(1724,-1.5)(2020,275)% y-axis
+  }%                             |_____________ shift right by 1740 years
   %-------------------------------------
-  % plot
+  % annotation
+  %-------------------------------------
+  \psset{linewidth=0.75pt}%
+  \psline[linecolor=red](1740,51.96481)(2015,51.96481)% average
+  %-------------------------------------
+  % plot data
   %-------------------------------------
   \fileplot{../../common/math/graphics/data/sunspots_1749-2004.dat}%
 \end{pspicture}%
