user defined functions in sunspot.R

--- a/common/density_estimation.tex
+++ b/common/density_estimation.tex
@@ -76,7 +76,7 @@ Alternatively, the results follow from \prefpp{thm:estML_amplitude}.
 %---------------------------------------
 The R code to the right
 calculates the \fncte{average} \xref{def:average} number of sunspots
-from 1749 to current times.
+from 1749 into 2013.
 \end{example}
 \end{minipage}
 \hfill
