--- a/common/math/graphics/data/sunspots_1749-2004.tex
+++ b/common/math/graphics/data/sunspots_1749-2004.tex
@@ -13,14 +13,14 @@
   % axes
   %-------------------------------------
   {%
-    \psset{ticks=all,labels=all,Dx=20,Dy=50,linecolor=axis,linewidth=0.75pt,}%
-         %       |          |   |     |________ y-labels increment
-         %       |          |   |______________ x-labels increment
-         %       |          |__________________ ticks  x/y/all/none
-         %       |__________|__________________ labels x/y/all/none
-    \psaxes[yAxis=false]{<->}(   0,0)(1724,-1.5)(2020,275)% x-axis
-    \psaxes[xAxis=false]{ ->}(1740,0)(1724,-1.5)(2020,275)% y-axis
-  }%                             |_____________ shift right by 1740 years
+    \psset{ticks=all, labels=all, Dx=50,Dy=50,linecolor=axis,linewidth=0.75pt,showorigin=false}%
+         %       |           |    |     |________ y-labels increment
+         %       |           |    |______________ x-labels increment
+         %       |           |___________________ ticks  x/y/all/none
+         %       |_______________________________ labels x/y/all/none
+    \psaxes[yAxis=false,labels=x,ticks=x]{<->}(0,0)(1724,-1.5)(2020,275)% x-axis with labels
+    \psaxes[xAxis=false,labels=y,ticks=y]{ ->}(1740,0)(1724,-1.5)(2020,275)% y-axis
+  }%                                           |_ shift right by 1740 years
   %-------------------------------------
   % annotation
   %-------------------------------------
