initial estimates of sunspot periodicity using R and bspec::welchPSD

--- a/common/density_estimation.tex
+++ b/common/density_estimation.tex
@@ -70,30 +70,30 @@ This result follows directly from \prefpp{thm:estML-CR} with
 Alternatively, the results follow from \prefpp{thm:estML_amplitude}.
 \end{proof}
 
-%---------------------------------------
-\begin{minipage}{\tw-115mm}
-\begin{example}
-%---------------------------------------
-The R code to the right
-calculates the \fncte{average} \xref{def:average} number of sunspots
-from 1749 into 2013.
-\end{example}
-\end{minipage}
-\hfill
-\begin{minipage}{110mm}
-\begin{lstlisting}[language=R]
-require(stats);
-N        = 50;
-mean     = 3;
-stddev   = 10;
-x        = stats::rnorm(N, mean, stddev);
-estimate = sum(x) / N;
-print(estimate);
-plot (x, col="blue", type="l");
-lines(c(start(x)[1],end(x)[1]), c(mean,mean), col="green");
-lines(c(start(x)[1],end(x)[1]), c(estimate,estimate), col="red");
-\end{lstlisting}
-\end{minipage}
+%%---------------------------------------
+%\begin{minipage}{\tw-115mm}
+%\begin{example}
+%%---------------------------------------
+%The R code to the right
+%calculates the \fncte{average} \xref{def:average} number of sunspots
+%from 1749 into 2013.
+%\end{example}
+%\end{minipage}
+%\hfill
+%\begin{minipage}{110mm}
+%\begin{lstlisting}[language=R]
+%require(stats);
+%N        = 50;
+%mean     = 3;
+%stddev   = 10;
+%x        = stats::rnorm(N, mean, stddev);
+%estimate = sum(x) / N;
+%print(estimate);
+%plot (x, col="blue", type="l");
+%lines(c(start(x)[1],end(x)[1]), c(mean,mean), col="green");
+%lines(c(start(x)[1],end(x)[1]), c(estimate,estimate), col="red");
+%\end{lstlisting}
+%\end{minipage}
 
 %=======================================
 \section{Nonparametric density estimation}
