--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -224,7 +224,7 @@ and $\mse(\text{arithmetic mean})$ be the mean square error of the \fncte{arithm
 \begin{figure}
   \centering%
   \includegraphics{graphics/sunspots_1749-2004.pdf}
-  \caption{Sunspots from 1749 into 2014\label{fig:sunspots}}
+  \caption{Sunspots data from 1749 into 2004\label{fig:sunspots}}
 \end{figure}
 %---------------------------------------
 \begin{minipage}{\tw-115mm}
@@ -549,25 +549,25 @@ In software/firmware implementations, recursive forms are very useful and effici
 \end{align*}
 \end{proof}
 
-%---------------------------------------
-\begin{minipage}{\tw-115mm}
-\begin{example}
-%---------------------------------------
-The R code to the right 
-\propb{recursively} calculates the \fncte{average}
-\xref{prop:average_recursive} number of sunspots
-from 1749 to current times.
-\end{example}
-\end{minipage}
-\hfill
-\begin{minipage}{110mm}
-\begin{lstlisting}[language=R]
-data(sunspots);     
-x   = sunspot.month;
-N   = length(x);    
-avg = sum(x) / N;
-print(avg);
-plot(x, col="blue");
-lines(c(start(x)[1],end(x)[1]), c(avg,avg), col="red")
-\end{lstlisting}
-\end{minipage}
+%%---------------------------------------
+%\begin{minipage}{\tw-115mm}
+%\begin{example}
+%%---------------------------------------
+%The R code to the right 
+%\propb{recursively} calculates the \fncte{average}
+%\xref{prop:average_recursive} number of sunspots
+%from 1749 to current times.
+%\end{example}
+%\end{minipage}
+%\hfill
+%\begin{minipage}{110mm}
+%\begin{lstlisting}[language=R]
+%data(sunspots);     
+%x   = sunspot.month;
+%N   = length(x);    
+%avg = sum(x) / N;
+%print(avg);
+%plot(x, col="blue");
+%lines(c(start(x)[1],end(x)[1]), c(avg,avg), col="red")
+%\end{lstlisting}
+%\end{minipage}
